# FluidSim

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  matrixChange.cpp  vcpkg.json
.github/workflows/: ci.yml
bld_vc.old/: CMakeCache.txt
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
headers/: aliases.hpp  const.hpp  event_manager.hpp  gui.hpp  matrix_change.hpp  matrix_to_pixel.hpp  timer.hpp  to_SFML.hpp  utils.hpp
src/: eventManger.hpp  event_manager.hpp  grid.hpp  gui.hpp  main.cpp  matrix_change.cpp
